<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/caja_fila"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/partida_elegida_partida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tabla_partidas"
        android:textColor="#000000"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/partida_elegida_cantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tabla_cantidad"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/partida_elegida_unidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="1.06"
        android:contentDescription="@string/partidas_unidades"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tabla_ud"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/partida_elegida_unitario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tabla_precio_unitario"
        android:textAlignment="viewEnd"
        android:textColor="#000000"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/partida_elegida_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_weight="0.9"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/tabla_precio_total"
        android:textAlignment="textEnd"
        android:textColor="#000000"
        android:textStyle="normal" />

</LinearLayout>