<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Reforma2">

    <ImageView
        android:id="@+id/menu15"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/menu"
        android:onClick="toMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/menu_48px" />

    <Button
        android:id="@+id/btn_ref_calcular"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="#FF00FF"
        android:text="@string/calcular"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/logo8"
        android:layout_width="90dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/txt_logo"
        android:onClick="toMain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/logo" />

    <TextView
        android:id="@+id/titulo_reforma2"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif"
        android:text="@string/txt_reforma"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FF00FF"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ref_cocina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:text="@string/ref1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_reforma2" />

    <CheckBox
        android:id="@+id/ref_distribucion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/ref2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_cocina" />

    <CheckBox
        android:id="@+id/ref_fontaneria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/ref3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_distribucion" />

    <CheckBox
        android:id="@+id/ref_electrica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/ref4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_fontaneria" />

    <CheckBox
        android:id="@+id/ref_calefaccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/ref5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_electrica" />

    <CheckBox
        android:id="@+id/ref_puertas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/ref6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_calefaccion" />

    <CheckBox
        android:id="@+id/ref_pintura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:text="@string/ref7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ref_puertas" />
</androidx.constraintlayout.widget.ConstraintLayout>